--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,8 @@
         "typo3/cms-scheduler": "^7.6.23 || ^8.7.9",
         "helhum/typo3-console": "^4.9",
 
+        "helmich/typo3-typoscript-lint": "^1.4.4",
+
         "oliverklee/phpunit": "^5.3",
         "nimut/testing-framework": "^2.0",
         "phpunit/phpunit": "^5.6",
@@ -75,6 +77,7 @@
     },
     "scripts": {
         "ci:php:lint": "find *.php Classes/ Configuration/ Tests/ -name '*.php' -print0 | xargs -0 -n 1 -P 4 php -l",
+        "ci:ts:lint": "typoscript-lint -c Configuration/TsLint.yml --ansi -n --fail-on-warnings -vvv Configuration/TypoScript/",
         "ci:tests:unit": "phpunit -c .Build/vendor/nimut/testing-framework/res/Configuration/UnitTests.xml Tests/Unit/",
         "ci:tests:unit-legacy": "$RUN_TESTS_COMMAND Tests/LegacyUnit/",
         "ci:tests:functional-legacy": "$RUN_TESTS_COMMAND Tests/LegacyFunctional/",
@@ -87,7 +90,8 @@
             "@ci:tests"
         ],
         "ci:static": [
-            "@ci:php:lint"
+            "@ci:php:lint",
+            "@ci:ts:lint"
         ],
         "ci": [
             "@ci:static",
